Creation et edition de la page profil

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,6 +25,11 @@
             "type": "npm",
             "script": "install",
             "problemMatcher": []
+        },
+        {
+            "type": "rake",
+            "task": "db:drop",
+            "problemMatcher": []
         }
     ]
 }
